--- a/assets/styles/gpts.css
+++ b/assets/styles/gpts.css
@@ -56,7 +56,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 .menu-content {
     display: none;
     padding: 15px;
-    background-color: var(--info-bg);
+    background-color: rgba(255, 0, 0, 0.49); /*var(--info-bg);*/
     border: 1px solid #000;
     border-radius: 13px; /* 5px; */
     margin-top: 10px;
@@ -72,7 +72,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     border-radius: 50%;
 
     object-fit: cover;
-    
+
     margin-right: 10px;
 }
 .menu-content .gpt-item span {
