--- a/assets/styles/gpts.css
+++ b/assets/styles/gpts.css
@@ -17,7 +17,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 -------------------------------------------------------------------------------
 
 # Version: v3.5 (250125)
-# URL: https://genialabile.com/assets/styles/main.css
+# URL: https://genialabile.com/assets/styles/gpts.css
 ===============================================================================
 */
 
@@ -56,7 +56,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 .menu-content {
     display: none;
     padding: 15px;
-    background-color: rgba(255, 0, 0, 0.49); /*var(--info-bg);*/
+    background-color: rgba(55, 255, 0, 0.834); /*var(--info-bg);*/
     border: 1px solid #000;
     border-radius: 13px; /* 5px; */
     margin-top: 10px;
