--- a/assets/styles/gpts.css
+++ b/assets/styles/gpts.css
@@ -84,9 +84,9 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
 
 .gpt-container {
-    max-width: 100%; /*1200px; /* 800px; */
+    max-width: 100%; /*1200px; /* 800px; 
     margin: 0 auto;
-    /* padding: var(--spacing); */
+    /* padding: var(--spacing); 
 }
 
 .menu-title {
@@ -95,7 +95,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     justify-content: space-between;
     cursor: pointer;
     background-color: var(--bg-color);
-    /* padding: 10px; */
+    /* padding: 10px; 
     border-radius: 5px;
     transition: background-color 3s;
 }
@@ -106,7 +106,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     margin: 0;
 }
 .menu-title .toggle-icon {
-    font-size: 1.5rem; /* 20px; */
+    font-size: 1.5rem; /* 20px; 
 }
 
 .toggle-icon:hover{
@@ -120,7 +120,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     padding: 15px;
     background-color: var(--info-bg);
     border: 1px solid #000;
-    border-radius: 13px; /* 5px; */
+    border-radius: 13px; /* 5px; 
     margin-top: 10px;
 }
 .menu-content .gpt-item {
@@ -137,3 +137,5 @@ Use, distribution, or modification of this project is strictly prohibited withou
 .menu-content .gpt-item span {
     font-size: 16px;
 }
+
+*/
