--- a/assets/styles/gpts.css
+++ b/assets/styles/gpts.css
@@ -29,13 +29,14 @@ Use, distribution, or modification of this project is strictly prohibited withou
 }
 
 .gpt-item a {
-    color: #00aaff; /* Colore del link */
-    text-decoration: none;
+    color:var(--acent);
+    text-decoration: underline;
 }
 
 .gpt-item a:hover {
-    text-decoration: underline;
-    color: #00ffcc;
+    text-decoration: none;
+    color: var(--compiler1-color);
+    font-weight: bold;
 }
 
 
@@ -69,7 +70,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 .menu-content {
     display: none;
     padding: 15px;
-    background-color: rgba(55, 255, 0, 0.834); /*var(--info-bg);*/
+    background-color: var(--info-bg);
     border: 1px solid #000;
     border-radius: 13px; /* 5px; */
     margin-top: 10px;
@@ -89,7 +90,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
     margin-right: 10px;
 }
 .menu-content .gpt-item span {
-    font-size: 16px;
+    font-size: 1rem; /*16px;*/
 }
 
 /*
