--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -236,7 +236,7 @@ footer.no-shadow {
     flex-wrap: wrap;
     gap: 0.3rem; /**/
     margin: 0 auto;
-    margin-bottom: 0; / */
+    margin-bottom: 0;
     text-align: center;
     font-size: 0.8rem;
 }
