--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -358,7 +358,7 @@ footer.no-shadow {
 
     main {
         max-width: 70%;
-        padding-bottom: 21rem;
+        padding-bottom: 17rem !important;
         padding: 0 6rem; 
 
 
@@ -387,7 +387,7 @@ footer.no-shadow {
     }
     main {
         max-width: 80%;
-        padding-bottom: 21rem;
+        padding-bottom: 21rem !important;
     }
 
     footer {
