--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -421,7 +421,7 @@ footer.no-shadow {
     main {
         max-width: 100%;
         padding: 1rem;
-        padding-bottom: 6rem;
+        padding-bottom: 6rem !important;
     }
 
     #typing-effect {   
@@ -460,7 +460,7 @@ footer.no-shadow {
     main {
         max-width: 100%;
         padding: 1rem;
-        padding-bottom: 3rem;
+        padding-bottom: 3rem !important;
     }
 
     footer {
